# Remote_Memory

./: CMakeLists.txt  README.md  main.cpp  server.cpp
Servers/: Client.h  Server.cpp  Server.h
Structures/: LinkedList.cpp  LinkedList.h  Node.cpp  Node.h  linkedList.cpp  linkedList.h  node.cpp  node.h
rmlib/: rmlib.cpp  rmlib.h
